; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfsearch.c_UpdateSearchStatus.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfsearch.c_UpdateSearchStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@SST_FORMAT = common dso_local global i32 0, align 4
@SST_RESOURCE = common dso_local global i32 0, align 4
@IDS_SEARCHMSG = common dso_local global i32 0, align 4
@SearchInfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@IDS_SEARCHING = common dso_local global i32 0, align 4
@szNULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UpdateSearchStatus(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @SST_FORMAT, align 4
  %7 = load i32, i32* @SST_RESOURCE, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @IDS_SEARCHMSG, align 4
  %10 = call i64 @MAKEINTRESOURCE(i32 %9)
  %11 = trunc i64 %10 to i32
  %12 = load i32, i32* %5, align 4
  %13 = call i32 (i32, i32, i32, ...) @SetStatusText(i32 0, i32 %8, i32 %11, i32 %12)
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SearchInfo, i32 0, i32 0), align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load i32, i32* @SST_RESOURCE, align 4
  %18 = load i32, i32* @IDS_SEARCHING, align 4
  %19 = call i64 @MAKEINTRESOURCE(i32 %18)
  %20 = trunc i64 %19 to i32
  %21 = call i32 (i32, i32, i32, ...) @SetStatusText(i32 1, i32 %17, i32 %20)
  br label %25

22:                                               ; preds = %2
  %23 = load i32, i32* @szNULL, align 4
  %24 = call i32 (i32, i32, i32, ...) @SetStatusText(i32 1, i32 0, i32 %23)
  br label %25

25:                                               ; preds = %22, %16
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @SetStatusText(i32, i32, i32, ...) #1

declare dso_local i64 @MAKEINTRESOURCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
